--- a/packages/amazon-sumerian-hosts-babylon/examples/hello-world-demo.html
+++ b/packages/amazon-sumerian-hosts-babylon/examples/hello-world-demo.html
@@ -22,7 +22,7 @@
       <canvas id="renderCanvas"></canvas>
 
       <div id="uiPanel">
-        <textarea id="speechText">Hello. It's nice to meet you. Are you there?</textarea>
+        <textarea id="speechText" rows="8">Hello. I'm Christine, a Sumerian host. It's nice to meet you.</textarea>
         <button id="speakButton">Speak</button>
       </div>
     </div>
