--- a/packages/amazon-sumerian-hosts-babylon/examples/index.html
+++ b/packages/amazon-sumerian-hosts-babylon/examples/index.html
@@ -20,6 +20,13 @@
           <a class="demo-link" href="gestures-demo.html">Gestures Demo</a>
         </h2>
       </div>
+      <div class="example">
+        <h2 class="title">
+          <a class="demo-link" href="custom-character-demo.html"
+            >Custom Character Demo</a
+          >
+        </h2>
+      </div>
     </div>
   </body>
 </html>
