Demos now use specific version of CDN-hosted Babylon libraries

--- a/packages/demos-babylon/src/gesturesDemo.html
+++ b/packages/demos-babylon/src/gesturesDemo.html
@@ -9,16 +9,14 @@
     <link rel="stylesheet" href="gesturesDemo.css" />
 
     <!-- Babylon.js dependencies -->
-    <script src="https://cdn.babylonjs.com/babylon.js"></script>
-    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-    <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.1/babylon.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs-loaders@4.2.1/babylonjs.loaders.min.js"></script>
 
     <!-- Sumerian Host dependencies -->
     <script
       type="text/javascript"
       src="https://sdk.amazonaws.com/js/aws-sdk-2.645.0.min.js"
     ></script>
-    <!-- <script type="text/javascript" src="../dist/host.babylon.js"></script> -->
 
     <!-- Demo logic -->
     <script type="module" src="gesturesDemo.bundle.js"></script>
