--- a/packages/demos-babylon/src/helloWorldDemo.html
+++ b/packages/demos-babylon/src/helloWorldDemo.html
@@ -26,7 +26,7 @@
       <canvas id="renderCanvas"></canvas>
 
       <div id="uiPanel">
-        <textarea id="speechText" rows="8">Hello. I'm Christine, a Sumerian host. It's nice to meet you.</textarea>
+        <textarea id="speechText" rows="8">Hello. I'm Cristine, a Sumerian host. It's nice to meet you.</textarea>
         <button id="speakButton">Speak</button>
       </div>
     </div>
