WIP move cognito identity pool to root and serve from webpack.

--- a/packages/amazon-sumerian-hosts-core/test/integration_test/core/core.Deferred.html
+++ b/packages/amazon-sumerian-hosts-core/test/integration_test/core/core.Deferred.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
   </head>
   <body>
-    <script type="text/javascript" src="../../../dist/host.core.js"></script>
+    <script type="text/javascript" src"../host.core.js"></script>
     <script>
       async function main() {
         const d = HOST.Deferred.cancel(5).then(
