--- a/packages/demos-babylon/src/customCharacterDemo.html
+++ b/packages/demos-babylon/src/customCharacterDemo.html
@@ -19,7 +19,7 @@
     ></script>
 
     <!-- Demo logic -->
-    <script type="module" src="/customCharacterDemo.js"></script>
+    <script type="module" src="customCharacterDemo.js"></script>
   </head>
   <body>
     <div id="mainScreen" class="screen loading">
