--- a/packages/amazon-sumerian-hosts-core/test/integration_test/core/core.texttospeech.html
+++ b/packages/amazon-sumerian-hosts-core/test/integration_test/core/core.texttospeech.html
@@ -14,13 +14,21 @@
       type="text/javascript"
       src="https://sdk.amazonaws.com/js/aws-sdk-2.645.0.min.js"
     ></script>
-    <script type="text/javascript" src="../../../dist/host.core.js"></script>
+    <script type="text/javascript" src="../host.core.js"></script>
     <script>
       async function main() {
+
+        // This is served by webpack-dev-server and comes from demo-credentials.js in the repo root
+        // If you copy this example, you will substitute in your own cognito Pool ID
+        const config = await(await fetch("/devConfig.json")).json();
+        // Parse the region out of the cognito Id
+        const region = config.cognitoIdentityPoolId.split(":")[0];
+
+
         // Initialize AWS and create Polly service objects
-        window.AWS.config.region = 'us-west-2';
+        window.AWS.config.region = region;
         window.AWS.config.credentials = new AWS.CognitoIdentityCredentials({
-          IdentityPoolId: '<Enter Cognito Identity Pool ID here>',
+          IdentityPoolId: config.cognitoIdentityPoolId
         });
         const polly = new AWS.Polly();
         const presigner = new AWS.Polly.Presigner();
