Modules don't work with karma, so moving back to node require

--- a/packages/demos-babylon/src/gesturesDemo.html
+++ b/packages/demos-babylon/src/gesturesDemo.html
@@ -19,7 +19,7 @@
     ></script>
 
     <!-- Demo logic -->
-    <script type="module" src="gesturesDemo.js"></script>
+    <script type="module" src="../dist/gesturesDemo.js"></script>
   </head>
   <body>
     <div id="mainScreen" class="screen loading">
