--- a/packages/amazon-sumerian-hosts-core/test/integration_test/core/core.lex.html
+++ b/packages/amazon-sumerian-hosts-core/test/integration_test/core/core.lex.html
@@ -19,7 +19,7 @@
       type="text/javascript"
       src="https://sdk.amazonaws.com/js/aws-sdk-2.645.0.min.js"
     ></script>
-    <script type="text/javascript" src="../host.core.js"></script>
+    <script type="text/javascript" src="../../../dist/host.core.js"></script>
     <script>
       async function main() {
         const startBtn = document.getElementById('startButton');
