--- a/packages/amazon-sumerian-hosts-core/test/integration_test/core/core.texttospeech.html
+++ b/packages/amazon-sumerian-hosts-core/test/integration_test/core/core.texttospeech.html
@@ -14,7 +14,7 @@
       type="text/javascript"
       src="https://sdk.amazonaws.com/js/aws-sdk-2.645.0.min.js"
     ></script>
-    <script type="text/javascript" src="../host.core.js"></script>
+    <script type="text/javascript" src="../../../dist/host.core.js"></script>
     <script>
       async function main() {
 
@@ -34,8 +34,7 @@
         const presigner = new AWS.Polly.Presigner();
 
         // Add services to Host text to speech
-        const {HostObject} = HOST;
-        const {TextToSpeechFeature} = HOST.aws;
+        const {HostObject, TextToSpeechFeature, TextToSpeechUtils} = HOST;
         await TextToSpeechFeature.initializeService(
           polly,
           presigner,
@@ -109,7 +108,6 @@
 
         // Test speeches
         function testSpeech() {
-          const {TextToSpeechUtils} = HOST.aws;
 
           const markMap = {
             '{"feature":"GestureFeature", "method":"switchToGesture", "args":["headShake", 0.5]}': [
