--- a/packages/demos-babylon/src/helloWorldDemo.html
+++ b/packages/demos-babylon/src/helloWorldDemo.html
@@ -19,7 +19,7 @@
     ></script>
 
     <!-- Demo logic -->
-    <script type="module" src="/helloWorldDemo.js"></script>
+    <script type="module" src="../dist/helloWorldDemo.js"></script>
   </head>
   <body>
     <div id="mainScreen" class="screen loading">
