Add chatbot demo WIP

--- a/packages/demos-babylon/src/index.html
+++ b/packages/demos-babylon/src/index.html
@@ -27,6 +27,11 @@
           >
         </h2>
       </div>
+      <div class="example">
+        <h2 class="title">
+          <a class="demo-link" href="chatbotDemo.html">Chatbot Demo</a>
+        </h2>
+      </div>
     </div>
   </body>
 </html>
