--- a/packages/demos-babylon/src/index.html
+++ b/packages/demos-babylon/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Demo List</title>
+    <title>BabylonJS Sumerian Host Demos</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -25,6 +25,11 @@
           <a class="demo-link" href="customCharacterDemo.html"
             >Custom Character Demo</a
           >
+        </h2>
+      </div>
+      <div class="example">
+        <h2 class="title">
+          <a class="demo-link" href="chatbotDemo.html">Chatbot Demo</a>
         </h2>
       </div>
     </div>
