remove the last AWS global from eslintrc, ensure all examples `import AWS from 'aws-sdk'`, fix three.texttospeech.html test

--- a/packages/amazon-sumerian-hosts-three/test/integration_test/three.js/three.texttospeech.html
+++ b/packages/amazon-sumerian-hosts-three/test/integration_test/three.js/three.texttospeech.html
@@ -20,7 +20,8 @@
           "three/": "https://cdn.jsdelivr.net/npm/three@0.127.0/",
           "@amazon-sumerian-hosts/core": "../../../../../node_modules/@amazon-sumerian-hosts/core/src/core/index.js",
           "@amazon-sumerian-hosts/three": "../../../../../node_modules/@amazon-sumerian-hosts/three/src/three.js/index.js",
-          "compare-versions": "../../../../../node_modules/compare-versions/lib/esm/index.js"
+          "compare-versions": "../../../../../node_modules/compare-versions/lib/esm/index.js",
+          "aws-sdk": "../../../../demos-babylon/src/aws-sdk-global.js"
         }
       }
     </script>
