--- a/packages/amazon-sumerian-hosts-core/test/integration_test/core/core.texttospeech.html
+++ b/packages/amazon-sumerian-hosts-core/test/integration_test/core/core.texttospeech.html
@@ -8,20 +8,24 @@
     <meta charset="UTF-8" />
     <title>Core Host Test</title>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+
+    <script src="../../../../../node_modules/aws-sdk/dist/aws-sdk.min.js"></script>
+
     <script type="importmap">
       {
         "imports": {
           "@amazon-sumerian-hosts/core": "../../../../../node_modules/@amazon-sumerian-hosts/core/src/core/index.js",
-          "compare-versions": "../../../../../node_modules/compare-versions/lib/esm/index.js"
+          "compare-versions": "../../../../../node_modules/compare-versions/lib/esm/index.js",
+          "aws-sdk": "../../../../demos-babylon/src/aws-sdk-global.js"
         }
       }
     </script>
   </head>
   <body>
-    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.645.0.min.js"></script>
     <script type="module">
       import {cognitoIdentityPoolId} from '../../../../../demo-credentials.js';
       import * as HOST from '@amazon-sumerian-hosts/core';
+      import AWS from 'aws-sdk';
 
       async function main() {
         // Parse the region out of the cognito Id
@@ -41,7 +45,7 @@
         await TextToSpeechFeature.initializeService(
           polly,
           presigner,
-          window.AWS.VERSION
+          AWS.VERSION
         );
 
         // Create the speaker who will deliver speeches
